# sdl2-text-renderer

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCairo.cmake  FindFreeType.cmake  FindSDL2.cmake
src/: main.cpp  main.h
